--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">firstGame</string>
     <string name="jugar">Jugar</string>
-    <string name="clasi">Top 1</string>
+    <string name="clasi">Clasificacion</string>
     <string name="rojo">rojo</string>
     <string name="negro">negro</string>
     <string name="nombre">Nombre</string>
